--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,53 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          package="com.kcasareo.ranging"
+          android:versionCode="1"
+          android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="21"
+              android:targetSdkVersion="21">
+    </uses-sdk>
 
-    <uses-permission/>
-    <permission/>
-    <permission-tree/>
-    <permission-group/>
-    <instrumentation/>
-    <uses-sdk/>
-    <uses-configuration/>
-    <uses-feature/>
-    <supports-screens/>
-    <compatible-screens/>
-    <supports-gl-texture/>
 
-    <application>
-
-        <activity>
-            <intent-filter>
-                <action/>
-                <category/>
-                <data/>
-            </intent-filter>
-            <meta-data/>
-        </activity>
-
-        <activity-alias>
-            <intent-filter>. . .</intent-filter>
-            <meta-data/>
-        </activity-alias>
-
-        <service>
-            <intent-filter>. . .</intent-filter>
-            <meta-data/>
-        </service>
-
-        <receiver>
-            <intent-filter>. . .</intent-filter>
-            <meta-data/>
-        </receiver>
-
-        <provider>
-            <grant-uri-permission/>
-            <meta-data/>
-            <path-permission/>
-        </provider>
-
-        <uses-library/>
-
-    </application>
-
+    <application android:label="@string/app_name"/>
 </manifest>
