--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,5 +9,6 @@
     </uses-sdk>
 
 
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <application android:label="@string/app_name"/>
 </manifest>
