--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
     sourceSets {
         main {
             aidl {
-                srcDirs = ['src/main/aidl/']
+                srcDirs = ['src/main/aidl']
             }
         }
     }
