--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.kcasareo.ranging"
-          android:versionCode="1"
-          android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="21"
-              android:targetSdkVersion="21">
-    </uses-sdk>
+    package="com.kcasareo.ranging" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://schemas.android.com/apk/res/android ">
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="21"></uses-sdk>
 
 
-    <application android:label="@string/app_name"/>
+    <application android:label="@string/app_name" />
 </manifest>
