--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,27 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     package="com.kcasareo.ranging">
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
+
+    <service
+        android:name="com.kcasareo.beaconService.BeaconService"
+        android:exported="false">
+        <intent-filter>
+            <action android:name="com.kcasareo.beaconService.BeaconService" />
+        </intent-filter>
+    </service>
+
+    <application
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name="com.kcasareo.application.MainActivity"></activity>
     </application>
-    <service android:name="com.kcasareo.beaconService.BeaconService"
-        android:exported="false">
-        <intent-filter>
-            <action android:name="com.kcasareo.beaconService.BeaconService"/>
-        </intent-filter>
 
-    </service>
 </manifest>
