--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.kcasareo.ranging">
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-
-    <service
-        android:name="com.kcasareo.beaconService.BeaconService"
-        android:exported="false">
-        <intent-filter>
-            <action android:name="com.kcasareo.beaconService.BeaconService" />
-        </intent-filter>
-    </service>
 
     <application
         android:allowBackup="true"
@@ -21,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name="com.kcasareo.application.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
@@ -28,6 +20,12 @@
                 <category android:name="android.intent.action.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <service
+            android:name="com.kcasareo.beaconService.BeaconService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.kcasareo.beaconService.IBeaconService" />
+            </intent-filter>
+        </service>
     </application>
-
 </manifest>
