--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,20 @@
 apply plugin: 'com.android.application'
 
+def keystorePropertiesFile=rootProject.file("key.properties")
+
+def keystoreProperties = new Properties()
+
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 android {
+    signingConfigs {
+        signingConfig {
+            keyAlias 'ranging'
+            keyPassword 'hopeme00'
+            storeFile file('C:/Users/Kevin/keystores/android-ranging.jks')
+            storePassword 'helpme00'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion '25.0.3'
     defaultConfig {
@@ -15,6 +29,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.signingConfig
         }
         debug {
             debuggable true
