--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.kcasareo.ranging">
+    package="com.LocaliseFramework.ranging">
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.kcasareo.application.MainActivity"
+        <activity android:name="com.LocaliseFramework.application.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name="com.kcasareo.beaconService.BeaconService"
+            android:name="com.LocaliseFramework.beaconService.BeaconService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.kcasareo.beaconService.IBeaconService" />
