--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+/*
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+*/
+buildscript {
+    ///*
+    repositories {
+        maven {
+            url 'https://github.com/rosjava/rosjava_mvn_repo/raw/indigo'
+        }
+        mavenCentral()
+        jcenter()
+
+
+
+    }//*/
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.3.1'
+    }
+    //apply from: "https://github.com/rosjava/android_core/raw/kinetic/buildscript.gradle"
+}
 
 allprojects {
     repositories {
+
         jcenter()
+//*
+        maven {
+            url 'https://github.com/rosjava/rosjava_mvn_repo/raw/indigo'
+        }
+        mavenCentral()//*/
     }
 }
 
