--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.LocaliseFramework.ranging">
+    package="com.BeaconManager.ranging">
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name="com.LocaliseFramework.application.MainActivity"
+        <activity android:name="com.BeaconManager.application.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
@@ -30,10 +30,10 @@
             </intent-filter>
         </activity>
         <activity android:name="org.ros.android.MasterChooser"
-            android:parentActivityName="com.LocaliseFramework.application.MainActivity">
+            android:parentActivityName="com.BeaconManager.application.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.LocaliseFramework.application.MainActivity"/>
+                android:value="com.BeaconManager.application.MainActivity"/>
         </activity>
         <service android:name="org.ros.android.NodeMainExecutorService">
             <intent-filter>
@@ -41,7 +41,7 @@
             </intent-filter>
         </service>
         <service
-            android:name="com.LocaliseFramework.beaconService.BeaconService"
+            android:name="com.BeaconManager.beaconService.BeaconService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.kcasareo.beaconService.IBeaconService" />
